--- a/templates/layout/page.ejs
+++ b/templates/layout/page.ejs
@@ -6,6 +6,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
 <script src='/vendor/bower_components/jquery/jquery.js'></script> 
  <script src='/vendor/bower_components/bootstrap/dist/js/bootstrap.js'></script> 
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   </head>
   <body>
 <header>
