--- a/templates/partials/topNavigation.ejs
+++ b/templates/partials/topNavigation.ejs
@@ -1,12 +1,20 @@
-<nav class="navbar navbar-default" role="navigation">
-<ul class="nav navbar-nav">
-  <li><a href="/">
-    Главная
-   </a></li>
-</ul>
-<ul class="nav navbar-navnavbar-right">
-    <li><a href="/login">
-    Войти
-   </a></li>
-</ul>
+ <nav class="navbar navbar-default" role="navigation">
+    <ul class="nav navbar-nav" >
+        <li> <a href="/">Главная</a></li>
+        <% if (user) { %>
+        <li><a href="/chat"> Чат</a></li>
+                <% } %>
+
+    </ul>
+<ul class="nav navbar-nav  navbar-right" >
+ <% if (user) { %>
+     <form action="logout" method="post">
+  <p><input type="submit" value="Выйти"></p>
+ </form>
+<% }else { %>
+        <li><a href="/login">Войти</a></li>
+  <% } %>
+    </ul>
 </nav>
+
+    
