--- a/templates/partials/topNavigation.ejs
+++ b/templates/partials/topNavigation.ejs
@@ -3,6 +3,7 @@
         <li> <a href="/">Главная</a></li>
         <% if (user) { %>
         <li><a href="/chat"> Чат</a></li>
+        <li><a href="/groups"> группы</a></li>
                 <% } %>
 
     </ul>
