ADD teacher look

--- a/templates/partials/topNavigation.ejs
+++ b/templates/partials/topNavigation.ejs
@@ -2,8 +2,8 @@
     <ul class="nav navbar-nav" >
         <li> <a href="/">Главная</a></li>
         <% if (user) { %>
-        <li><a href="/chat"> Чат</a></li>
         <li><a href="/groups"> группы</a></li>
+        <li> <a href ="/teachers">преподаватели</a></li>
                 <% } %>
 
     </ul>
