--- a/templates/layout/page.ejs
+++ b/templates/layout/page.ejs
@@ -4,9 +4,8 @@
     <title><%= blocks.title %></title>
     <link rel='stylesheet' href='/vendor/bower_components/bootstrap/dist/css/bootstrap.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
-<script src='/vendor/bower_components/jquery/jquery.js'></script> 
+<script type="text/javascript" src='/vendor/bower_components/jquery/dist/jquery.min.js'></script> 
  <script src='/vendor/bower_components/bootstrap/dist/js/bootstrap.js'></script> 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   </head>
   <body>
 <header>
