--- a/server/templates/frontpage.ejs
+++ b/server/templates/frontpage.ejs
@@ -1,3 +1,3 @@
 <% layout('layout/page') -%>
-<% block('title', 'hello');%>
-<p class="lead"> Hello All!</p> 
+<% block('title', 'Добрый день');%>
+<p class="lead"> Вас приветствует "Расписание ПГТУ" !</p> 
