--- a/server/templates/teacherDay.ejs
+++ b/server/templates/teacherDay.ejs
@@ -14,6 +14,7 @@
     <th>преподаватель</th>
     <th>Аудитория</th>
     <th>Корпус</th>
+    <th>Редактировать</th>
    </tr>
 <% for(var i= 0; i<result.length; i++) {%>
 <tr>
@@ -25,9 +26,12 @@
     <td><%=  result[i].get('teacher') %></td>
     <td><%=  result[i].get('auditory') %></td>
     <td><%=  result[i].get('hull') %></td>
+    <td><a href="update?group=<%=  result[i].idGroup %>&&day=<%=  day %>&&id=<%=  result[i].get('_id') %>"> <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 </tr>
 <% } %>
   </table>
 <% }else { %>
     <h1> <%=teacher%>  в <%=day%> не учит </h1>
 <% } %>
+
+<a href="?teacher=<%=hash%>&&day=<%=day%>&&update=true" ><button type="button" class="btn btn-danger">Изменить</button></a>
