--- a/server/templates/teacherDay.ejs
+++ b/server/templates/teacherDay.ejs
@@ -26,7 +26,10 @@
     <td><%=  result[i].get('teacher') %></td>
     <td><%=  result[i].get('auditory') %></td>
     <td><%=  result[i].get('hull') %></td>
+    <% if(result[i].idGroup) {%>
     <td><a href="update?group=<%=  result[i].idGroup %>&&day=<%=  day %>&&id=<%=  result[i].get('_id') %>"> <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+<% } %>
+ 
 </tr>
 <% } %>
   </table>
