--- a/server/templates/updateChanges.ejs
+++ b/server/templates/updateChanges.ejs
@@ -2,22 +2,18 @@
 <% block('title', 'Расписание');%>
 <p class="lead"> Дни!</p> 
 <p> Добро пожаловать, <%=user.get('username')%></p>
-<p> Добро пожаловать В расписание , <%=result.teacher%>, в <%=result.day%> День</p>
-
+<p> Добро пожаловать В изменеия расписания , <%=result.teacher%>, в <%=result.day%> День</p>
 
 <script>
           function call() {
-                
 		var error = document.getElementById("error");
-                
                 error.innerHTML = "";
                 var submitButton = document.getElementById("submittingForm");
-              
                 submitButton.innerHTML  = "loading";
                 var form = $('#formx');
                 var msg   = $('#formx').serialize();
                 $.ajax({
-			url: "update",
+			url: "updateChanges",
 			type: "POST",
 			data : msg,
 			complete : function() {
@@ -36,15 +32,46 @@
                             });
  
     	};
+        
 	 </script>
-
+<script>
+  function del() {   
+                var error = document.getElementById("error2");
+                error.innerHTML = "";
+                var submitButton = document.getElementById("deleteChangesForm");
+                submitButton.innerHTML  = "loading";
+                var form = $('#forma');
+                var msg   = $('#forma').serialize();
+                $.ajax({
+			url: "deleteChanges",
+			type: "POST",
+			data : msg,
+			complete : function() {
+				$(":submit", form).button("reset");
+				},
+                        statusCode : {
+				200 : function() {
+				   form.html("Изменения успешно удалено").addClass('alert-success');
+                                   window.location.href = "http://localhost:3000/teachers";
+				   },
+				403 : function(jqXHR) {
+						var error2 = JSON.parse(jqXHR.responseText);
+						$('.error2', form).html(error2.message);
+					}
+				}
+                            });
+ 
+    	};
+</script>
 <div class="container col-md-4">
+
 <form class="form-horizontal login-form"  method="POST" id="formx" action="javascript:void(null);" onsubmit="call()"> 
   <input type="hidden"  name="idNotice"  value= <%=result._id%>>
   <input type="hidden"  name="teacher"  value="<%=result.teacher%>">
+ <input type="hidden" name="_id"  value="<%=result._id%>">
  <div class="form-group">
 <label for="groupName">Группа</label>
-    <input readonly type="text" name="groupName" class="form-control" id="groupName"  value="<%=groupName%>">
+    <input readonly type="text" name="groupName" class="form-control" id="groupName"  value="<%=result.groupName%>">
 </div>
   <div class="form-group">
  <label for="isCycleChanged">Разовое или Постоянное изменение расписания:</label>
@@ -93,7 +120,7 @@
   </div>
   <div class="form-group">
      <label for="dayOld">Day</label>
-     <input readonly type="text" class="form-control" id="dayOld" name="dayOld"   value=<%=day%>>
+     <input readonly type="text" class="form-control" id="dayOld" name="dayOld"   value=<%=result.day%>>
      <label for="day">New Day</label>
 <select class="form-control" name="day" id="day">
     <option selected value=""></option>
@@ -107,7 +134,15 @@
   </div>
  
  
-  <button type="submit" class="btn btn-primary submitButton" id="submittingForm" data-loading-text="изменяю..."> Изменяю</button>
+  <button type="submit" class="btn btn-primary submitButton" id="submittingForm" data-loading-text="обновляю..."> обновить</button>
     <span class="help-block error" id="error"></span>
 </form>
+<div class="row">&nbsp;</div>
+
+<form class="form-horizontal login-form"  method="POST" id="forma" action="javascript:void(null);" onsubmit="del()"> 
+ <input type="hidden" name="idDelete"  value="<%=result._id%>"> 
+<button type="submit" class="btn btn-primary  btn-danger submitButton" id="deleteChangesForm" data-loading-text="Удаляю..."> Удалить это изменение</button>
+ <span class="help-block error2" id="error2"></span>
+</form>
 </div>
+
