--- a/server/templates/chat.ejs
+++ b/server/templates/chat.ejs
@@ -3,3 +3,31 @@
 <p class="lead"> Здесь будет чат!</p> 
 
 <p> Добро пожаловать, <%=user.get('username')%></p>
+
+<script src="/socket.io/socket.io.js"></script>
+<div id="room">
+<ul></ul>
+
+<form>
+<input class="form-control" autocomplete="off" autofocus placeholder="Сообщения"> 
+</form>
+</div>
+<script >
+    var socket =io.connect();
+    var form = $('#room form');
+    var ul = $('#room ul');
+    form.submit(function(){
+        var input = $(this).find(':input');
+        var text = input.val();
+        input.val('');
+        socket.emit('message', text, function(data) {
+            console.log(data);
+            $('<li>', {text: text}).appendTo(ul);
+        });
+
+        return false;
+    })
+    socket.on('message', function(text) {
+          $('<li>', {text: text}).appendTo(ul);
+} );
+</script> 
