--- a/server/templates/layout/page.ejs
+++ b/server/templates/layout/page.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= blocks.title %></title>
     <link rel='stylesheet' href='/vendor/bower_components/bootstrap/dist/css/bootstrap.css' />
+    <link rel='stylesheet' href='/vendor/bower_components/bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
 <script type="text/javascript" src='/vendor/bower_components/jquery/dist/jquery.min.js'></script> 
  <script src='/vendor/bower_components/bootstrap/dist/js/bootstrap.js'></script> 
@@ -12,14 +13,104 @@
   <link rel="stylesheet" href="/vendor/bower_components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/vendor/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
   </head>
-  <body onload="startTime()"><header>
-<h1><%-blocks.header%></h1>
-</header>
-     <section class="container">
-    <%-partial('../partials/topNavigation')%>
-     <h1><%=blocks.title%></h1>
- 
+  <body >
+    <div class="navbar-wrapper">
+      <div class="container">
+
+        <nav class="navbar navbar-default navbar-static-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Project name</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+             <ul class="nav navbar-nav" >
+        <li> <a href="/">Главная</a></li>
+        <% if (user) { %>
+        <li><a href="/groups"> Группы</a></li>
+        <li> <a href ="/teachers">Преподаватели</a></li>
+                <% } %>
+
+    </ul>
+
+<ul class="nav navbar-nav  navbar-right" >
+ <% if (user) { %>
+    <form role="form"  action="logout" method="post">
+    <div class="form-group">
+    <input  type="submit" value="Выйти" class="btn-default btn">
+   </div>
+ </form>
+<% }else { %>
+        <li><a href="/login">Войти</a></li>
+  <% } %>
+    </ul>
+            </div>
+          </div>
+        </nav>
+
+      </div>
+    </div>
+
+
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="/images/second.jpg" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Добро Пожаловать!</h1>
+              <p >Идти ли сегодня на пару? Будет ли сегодня пара? - Такие вопросы в прошлом! С нашим Расписанием в Кармане!</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Скачать</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="/images/third.jpg" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Сообщения об изменениях!</h1>
+              <p >Если ты тот кто хочет знать всё о последних изменениях,заметка - то это приложение для тебя!</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Беру!</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="/images/first.jpg" alt="Third slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Мы открыты!</h1>
+              <p>Есть какие то замечания , недоработки, или что то неправильно работает ? Соббщите нам мы исправим!</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Написать!</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
+ <div class="container">
+
 <%-body%>
+</div>
 </section>
 <footer>
   <%-blocks.footer%>
